Search specific cuisine logic implementation with MVP architecture and Retrofit using RXJava

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -93,7 +93,11 @@
         android:id="@+id/searchByCountryFragment"
         android:name="com.example.foodplanner.searchByCountry.View.SearchByCountryFragment"
         android:label="fragment_search_by_country"
-        tools:layout="@layout/fragment_search_by_country" />
+        tools:layout="@layout/fragment_search_by_country" >
+        <action
+            android:id="@+id/action_searchByCountryFragment_to_specificCuisine"
+            app:destination="@id/specificCuisine" />
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.foodplanner.login.view.LoginFragment"
@@ -154,6 +158,15 @@
             app:argType="string" />
         <action
             android:id="@+id/action_searchSpecificCategory_to_mealDetailsFragment"
+            app:destination="@id/mealDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/specificCuisine"
+        android:name="com.example.foodplanner.SpecificCuisine.view.SpecificCuisineFragment"
+        android:label="fragment_specific_cuisine"
+        tools:layout="@layout/fragment_specific_cuisine" >
+        <action
+            android:id="@+id/action_specificCuisine_to_mealDetailsFragment"
             app:destination="@id/mealDetailsFragment" />
     </fragment>
 </navigation>
