--- a/app/src/main/res/layout/fragment_search_by_category.xml
+++ b/app/src/main/res/layout/fragment_search_by_category.xml
@@ -38,7 +38,7 @@
             </SearchView>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/categoryRecyclerView"
+                android:id="@+id/cuisineRecyclerView"
                 android:layout_width="352dp"
                 android:layout_height="561dp"
                 app:layout_constraintBottom_toBottomOf="parent"
