Search specific cuisine logic implementation with MVP architecture and Retrofit using RXJava

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -168,5 +168,8 @@
         <action
             android:id="@+id/action_specificCuisine_to_mealDetailsFragment"
             app:destination="@id/mealDetailsFragment" />
+        <argument
+            android:name="cuisineName"
+            app:argType="string" />
     </fragment>
 </navigation>
