--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -78,8 +78,8 @@
         android:label="fragment_searc_byh_ingridient"
         tools:layout="@layout/fragment_search_by_ingridient" >
         <action
-            android:id="@+id/action_searcByhIngridientFragment_to_specificIngerdient"
-            app:destination="@id/specificIngerdient" />
+            android:id="@+id/action_searcByhIngridientFragment_to_specificIngredient"
+            app:destination="@id/specificIngredient" />
     </fragment>
     <fragment
         android:id="@+id/searchByCategory"
@@ -151,10 +151,10 @@
             app:argType="string" />
     </fragment>
     <fragment
-        android:id="@+id/specificIngerdient"
-        android:name="com.example.foodplanner.spcificIngredient.view.SpecificIngerdient"
-        android:label="fragment_specific_ingerdient"
-        tools:layout="@layout/fragment_specific_ingerdient" >
+        android:id="@+id/specificIngredient"
+        android:name="com.example.foodplanner.specificIngredient.view.SpecificIngredient"
+        android:label="fragment_specific_ingredient"
+        tools:layout="@layout/fragment_specific_ingredient" >
         <argument
             android:name="IngredientName"
             app:argType="string" />
