--- a/app/src/main/res/layout/daily_inspiration_img.xml
+++ b/app/src/main/res/layout/daily_inspiration_img.xml
@@ -20,8 +20,8 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="128dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
