--- a/app/src/main/res/layout/favorite_items.xml
+++ b/app/src/main/res/layout/favorite_items.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="280dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:elevation="6dp"
     app:cardCornerRadius="20dp"
@@ -19,7 +20,10 @@
             android:id="@+id/favMealName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/arimo_bold_italic"
             android:text="TextView"
+            android:textColor="@color/darkYellow"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.518"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +33,10 @@
             android:id="@+id/favMealCountry"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
+            android:fontFamily="@font/arimo_bold_italic"
             android:text="TextView"
+            android:textColor="@color/darkYellow"
+            android:textSize="16dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline17"
             app:layout_constraintEnd_toEndOf="@+id/favMealName"
             app:layout_constraintStart_toStartOf="@+id/favMealName"
@@ -40,13 +47,14 @@
             android:layout_width="52dp"
             android:layout_height="45dp"
             android:background="@drawable/baseline_delete_outline_24"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline17" />
 
         <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:layout_margin="10dp"
             app:cardCornerRadius="100dp"
             app:layout_constraintBottom_toTopOf="@+id/favMealName"
