--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,8 +20,6 @@
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/lightGrey"
-        android:backgroundTint="@color/lightGrey"
         app:cardCornerRadius="30dp"
         app:cardElevation="0dp"
         app:cardMaxElevation="0dp"
@@ -40,14 +38,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="391dp" />
+                app:layout_constraintGuide_end="377dp" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:fontFamily="@font/boogaloo"
                 android:text="@string/email"
+                android:textColor="@color/darkYellow"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,10 +65,11 @@
 
             <EditText
                 android:id="@+id/txtPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="273dp"
+                android:layout_height="45dp"
                 android:layout_marginTop="24dp"
                 android:ems="10"
+                android:hint="please enter your password"
                 android:inputType="textPassword"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -78,7 +80,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:fontFamily="@font/boogaloo"
                 android:text="@string/password"
+                android:textColor="@color/darkYellow"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
 
@@ -91,9 +96,8 @@
                 android:layout_below="@id/textView5"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.436"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline4"
+                app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
             <TextView
@@ -101,7 +105,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:fontFamily="@font/boogaloo"
                 android:text="@string/message"
+                android:textColor="@color/darkYellow"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintHorizontal_bias="0.52"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
@@ -112,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.93917274" />
+                app:layout_constraintGuide_begin="386dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline6"
@@ -126,11 +133,12 @@
                 android:layout_width="154dp"
                 android:layout_height="39dp"
                 android:background="@drawable/custom_button"
+                android:fontFamily="@font/boogaloo"
                 android:text="@string/login"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
-                app:layout_constraintHorizontal_bias="0.487"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/textView5"
                 app:layout_constraintVertical_bias="0.81" />
 
@@ -138,8 +146,9 @@
                 android:id="@+id/forgotxt"
                 android:layout_width="342dp"
                 android:layout_height="18dp"
-                android:layout_marginTop="18dp"
                 android:text="@string/forgottxt"
+                android:textColor="#0040ff"
+                android:textSize="14dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.492"
                 app:layout_constraintStart_toStartOf="parent"
@@ -159,6 +168,9 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/boogaloo"
+        android:textSize="36dp"
+        android:textColor="@color/darkYellow"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
