--- a/app/src/main/res/layout/fragment_meal_details.xml
+++ b/app/src/main/res/layout/fragment_meal_details.xml
@@ -68,8 +68,8 @@
 
                 <Button
                     android:id="@+id/addToFavButton"
-                    android:layout_width="42dp"
-                    android:layout_height="39dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:layout_margin="20dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
@@ -82,6 +82,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="32dp"
+                    android:fontFamily="@font/arimo_bold_italic"
+                    android:textColor="@color/darkYellow"
+                    android:textSize="20dp"
                     android:text="TextView"
                     app:layout_constraintBottom_toTopOf="@+id/guideline13"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -93,6 +96,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="TextView"
+                    android:fontFamily="@font/arimo_bold_italic"
+                    android:textColor="@color/darkYellow"
+                    android:textSize="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline12"
                     app:layout_constraintTop_toTopOf="@+id/guideline14" />
@@ -158,7 +164,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:text="TextView"
+            android:fontFamily="@font/arimo_bold_italic"
+            android:text="@string/ing"
+            android:textColor="@color/darkYellow"
+            android:textSize="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline22" />
 
@@ -168,7 +177,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:text="TextView"
+            android:fontFamily="@font/arimo_bold_italic"
+            android:text="@string/recipeTiltle"
+            android:textColor="@color/darkYellow"
+            android:textSize="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/myRecyclerView" />
 
