--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -20,8 +20,6 @@
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/lightGrey"
-        android:backgroundTint="@color/lightGrey"
         app:cardCornerRadius="30dp"
         app:cardElevation="0dp"
         app:cardMaxElevation="0dp"
@@ -44,6 +42,9 @@
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
+                android:fontFamily="@font/boogaloo"
+                android:textColor="@color/darkYellow"
+                android:textSize="16dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:text="@string/name"
@@ -55,6 +56,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/boogaloo"
+                android:textColor="@color/darkYellow"
+                android:textSize="16dp"
                 android:text="@string/email"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/nameSignuptxt" />
@@ -66,7 +70,9 @@
                 android:layout_marginBottom="50dp"
 
                 android:background="@drawable/custom_button"
+                android:fontFamily="@font/boogaloo"
                 android:text="@string/signUp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintStart_toStartOf="@+id/guideline5" />
@@ -80,8 +86,8 @@
 
             <EditText
                 android:id="@+id/emailSigntxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="256dp"
+                android:layout_height="43dp"
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:hint="please enter your email"
@@ -91,11 +97,11 @@
 
             <EditText
                 android:id="@+id/nameSignuptxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="257dp"
+                android:layout_height="47dp"
                 android:layout_marginTop="8dp"
                 android:ems="10"
-                android:hint="please ebter your name"
+                android:hint="please enter your name"
                 android:inputType="textPersonName"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -105,36 +111,45 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/boogaloo"
+                android:textColor="@color/darkYellow"
+                android:textSize="16dp"
                 android:text="Password"
+                android:hint="please enter your password"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/emailSigntxt" />
 
             <EditText
                 android:id="@+id/passwordSignup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="263dp"
+                android:layout_height="44dp"
                 android:layout_marginTop="8dp"
                 android:ems="10"
+                android:hint="please enter your password"
                 android:inputType="textPassword"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
-                app:layout_constraintTop_toBottomOf="@+id/textView6"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Password"
+                android:fontFamily="@font/boogaloo"
+                android:textColor="@color/darkYellow"
+                android:textSize="16dp"
+                android:text="Confirm password"
+                android:hint="please confirm your password"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />
 
             <EditText
                 android:id="@+id/passwordSignup2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="257dp"
+                android:layout_height="43dp"
                 android:layout_marginTop="8dp"
                 android:ems="10"
+                android:hint="please confirm your password "
                 android:inputType="textPassword"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -154,6 +169,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:fontFamily="@font/boogaloo"
+        android:textSize="36dp"
+        android:textColor="@color/darkYellow"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
