--- a/app/src/main/res/layout/fragment_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_on_boarding.xml
@@ -21,8 +21,9 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/skip_btn"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="201dp"
+        android:layout_height="47dp"
+        android:alpha="0.55"
         android:layout_marginBottom="116dp"
         android:background="@drawable/background"
         android:text="@string/get_start"
@@ -37,13 +38,15 @@
 
     <LinearLayout
         android:id="@+id/indicator_layout"
-        android:layout_width="4dp"
-        android:layout_height="0dp"
+        android:layout_width="118dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="50dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/slideViewPager"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/skip_btn">
 
 
     </LinearLayout>
