--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -26,11 +26,15 @@
 
             <TextView
                 android:id="@+id/acc_sett_txt"
-                android:layout_width="144dp"
-                android:layout_height="42dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
+                android:fontFamily="@font/boogaloo"
                 android:text="@string/acc_sett_txt"
+                android:textColor="@color/darkYellow"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/topcard"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,53 +43,43 @@
                 android:layout_width="76dp"
 
                 android:layout_height="69dp"
-                android:layout_marginStart="16dp"
 
-                android:layout_marginTop="25dp"
                 app:cardCornerRadius="1500dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/acc_sett_txt">
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="83dp">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="84dp"
-                    android:layout_height="67dp">
+                <ImageView
+                    android:id="@+id/acccard"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/darkYellow"
+                    android:src="@drawable/accounts" />
 
-                    <ImageView
-                        android:id="@+id/acccard"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:background="@color/darkYellow"
-                        android:src="@drawable/accounts"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/profileTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginBottom="50dp"
+                android:fontFamily="@font/arimo_bold_italic"
+                android:textColor="@color/darkYellow"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/topcard" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/profileTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomcard" />
 
     <Button
         android:id="@+id/logoutBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:fontFamily="@font/boogaloo"
         android:text="@string/logoutbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileTv" />
+        android:background="@drawable/custom_button"
+        android:textColor="@color/darkGreen"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="312dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
