--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,13 +7,36 @@
     android:background="@color/darkGreen"
     tools:context=".login.view.LoginFragment">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="300dp"
+        android:layout_height="102dp"
+        android:layout_marginTop="43dp"
+        android:text="@string/appName"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="104dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="52dp"
+        android:src="@drawable/mychef"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/view"
         android:layout_width="411dp"
         android:layout_height="123dp"
+        android:background="@color/lightGrey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/lightGrey"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
@@ -42,12 +65,12 @@
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
-                android:fontFamily="@font/boogaloo"
-                android:textColor="@color/darkYellow"
-                android:textSize="16dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:fontFamily="@font/boogaloo"
                 android:text="@string/name"
+                android:textColor="@color/darkYellow"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,9 +80,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/boogaloo"
+                android:text="@string/email"
                 android:textColor="@color/darkYellow"
                 android:textSize="16dp"
-                android:text="@string/email"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/nameSignuptxt" />
 
@@ -112,10 +135,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/boogaloo"
+                android:hint="please enter your password"
+                android:text="Password"
                 android:textColor="@color/darkYellow"
                 android:textSize="16dp"
-                android:text="Password"
-                android:hint="please enter your password"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/emailSigntxt" />
 
@@ -136,10 +159,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/boogaloo"
+                android:hint="please confirm your password"
+                android:text="Confirm password"
                 android:textColor="@color/darkYellow"
                 android:textSize="16dp"
-                android:text="Confirm password"
-                android:hint="please confirm your password"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />
 
@@ -163,18 +186,5 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="216dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:fontFamily="@font/boogaloo"
-        android:textSize="36dp"
-        android:textColor="@color/darkYellow"
-        app:layout_constraintBottom_toTopOf="@+id/cardView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
