--- a/app/src/main/res/layout/ingredients_items.xml
+++ b/app/src/main/res/layout/ingredients_items.xml
@@ -39,7 +39,11 @@
             android:id="@+id/ingredientName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/arimo_bold_italic"
             android:text="TextView"
+            android:textColor="@color/darkYellow"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView4" />
