--- a/app/src/main/res/layout/you_might_like_img.xml
+++ b/app/src/main/res/layout/you_might_like_img.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="150dp"
-    android:layout_height="250dp"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:elevation="6dp"
     app:cardCornerRadius="20dp"
@@ -24,14 +24,18 @@
             android:layout_marginBottom="24dp"
             android:background="@drawable/baseline_favorite_border_24"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_name" />
 
         <TextView
             android:id="@+id/img_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/arimo_bold_italic"
             android:text="TextView"
+            android:textColor="@color/darkYellow"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView3" />
