plan week screen UI ️

--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -17,7 +17,7 @@
         android:icon="@drawable/favourite"/>
 
 
-    <item android:id="@+id/nav_calendar"
+    <item android:id="@+id/nav_weekPlan"
         android:title="Calendar"
         android:icon="@drawable/calendar"/>
 
